MODINVSTOR-1230: modify request body and message sending